--- a/asli/style.css
+++ b/asli/style.css
@@ -415,6 +415,7 @@ nav .fa{
         color:rgb(5, 5, 44);
         font-family: 'Roboto', sans-serif; 
         font-weight: bolder;
+        margin: 0;
     }
 
 .free .one h3 {
@@ -436,7 +437,7 @@ nav .fa{
     }
  .free .one h5 {
         color: #fff;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
         line-height: normal;
         font-size: 2.5rem;
         font-family: 'Roboto', sans-serif;   
@@ -1618,7 +1619,7 @@ color: rgb(22, 22, 22);
         height: 170px;
         padding: 0;
         margin: 0;
-        margin-top: 45px;
+        margin-top: 65px;
         
 
     }
