--- a/asli/style.css
+++ b/asli/style.css
@@ -1582,18 +1582,22 @@ color: rgb(22, 22, 22);
 .dev-team  h1{
     font-size: 35px;
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
 }
+
 .dev-team  h3{
     font-size: 12px;
     text-align: center;
     margin-bottom: 10px;
     color: grey;
 }
+
 .dev-team .teams .dev-sec img{
     position: relative;
-    left:100px;
+    left:70px;
     padding: 10px;
+    height: 150px;
+    width: 150px;
     border-radius: 100%;
 
 }
