--- a/style.css
+++ b/style.css
@@ -473,6 +473,7 @@ nav .fa{
         font-weight: bolder;
         margin: 5px;
         padding: 0;
+        margin-top: 70px;
     }
 
 .service .content h2 {
@@ -495,13 +496,13 @@ nav .fa{
   
 
 .service .imagee{
-        width: 15px;
-        height: 15px;
+         width: 210px;
+        height: 210px;
         padding: 0;
+        margin: 0;
+        margin-top: 40px; 
         margin-bottom: 30px;
-       
-
-    }
+       }
 
 
 .kashmir{
@@ -796,18 +797,21 @@ nav .fa{
     margin-left: 10px;
 }
 .service .imagee{
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
     margin-top: 60px;
     margin-right:20px;
     margin-left: 20px;
+    border-radius: 100%;
+    
 
 }
 
 .service .imagee img{
-    height:45vh;
+    height:43vh;
+    border-radius: 100%;
     width:100%;
-    border-radius: 300px;
+    
 }
 
 
@@ -836,13 +840,16 @@ nav .fa{
 .service .content p{
     line-height: normal;
     font-size: 2.8rem;
-    font-weight: 500;
     color:rgb(5, 5, 44);
     font-family: 'Roboto', sans-serif; 
     padding:0.5rem;
     margin-top: 20px;
     margin-bottom: 0px;
     
+}
+.enroll-logo{
+    width: 140px;
+    height: 50px;
 }
 
 
@@ -1790,11 +1797,3 @@ margin: 10px 0px;
     width: 200px;
     height: 50px;
 }
-
-
-
-
-
-
-
-
